# cib_utils

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: copilot-instructions.md
apps/: CMakeLists.txt  POSITION_SERVER_README.md  cib_daq_client_simulator.cpp  cib_daq_server.cpp  cib_lbls_server.cpp  cib_log_server.cpp  cib_manager.cpp  cib_trigger_analyser.cpp  cib_trigger_dumper.cpp  position_client.py  position_server.cpp  position_server.service
apps/deprecated/: cib_admin_controller.cpp  cib_daq_client_simulator.cpp  cib_daq_interface.cpp  cib_lbls_pin_ptr_streamer.cpp
apps/systemd/: cib_daq_server.service  cib_lbls_server.service  cib_log_server.service
axi_fifo/: CMakeLists.txt  read_axi_fifo.cpp  read_daq_fifo.cpp
cib_debug/: CMakeLists.txt  cib_manager.cpp  test_lbls_interface.cpp
common/: CMakeLists.txt  WorkerThread.cpp  WorkerThread.hpp  cib_constants.cpp  cib_data_fmt.h  cib_data_utils.cpp  cib_data_utils.h  cib_mem.h  cib_time.cpp  cib_time.h  mem_utils.cpp  mem_utils.h  time_utils.cpp  time_utils.h
contrib/: axis-fifo.h
dac/: AD5339.h  CMakeLists.txt  I2C_Notes.md  dac_ad5339_test.cc  dac_setup.cc  example_program_i2c.cc
daq/: CIBModuleSim.cpp  CIBModuleSim.hpp  CMakeLists.txt  Handler.cpp  Handler.h  PacketContent.hpp  ReaderAXIFIFO.cpp  ReaderAXIFIFO.h  ReaderBase.cpp  ReaderBase.h  ReaderDMA.cpp  ReaderDMA.h
i2c/: AD5339.cpp  AD5339.h  ADN2814.cpp  ADN2814.h  ADN2814_ratemap.h  CMakeLists.txt  Device.cpp  Device.h  cdr_manager.cpp  check_cdr_chip.cpp  dac_manager.cpp  i2c_test_eeprom.cpp
i2c_misc/: ADN2814.cpp  ADN2814.h  CMakeLists.txt  Device.cpp  Device.h  check_cdr_chip.cpp  test_struct_msb.cpp
pdts/: CMakeLists.txt  check_timing.cpp
proto/: cib.proto
tests/: CMakeLists.txt  control_sender.py  receiver_server.py  sample_commands.json  sample_config.json  test_bitmask.cpp  test_json_config.cpp  test_namespace.cpp  test_read_write.cpp  test_signed_casting.cpp  test_struct_management.cpp
versaclock/: CMakeLists.txt  clk_versaclock.c  nfb_versaclock_registers.h  program_vc.c  template.c  test_i2c.cpp
