
#set(CMAKE_VERBOSE_MAKEFILE ON)

add_executable(cib_manager cib_manager.cpp)
target_compile_features(cib_manager PUBLIC cxx_std_11)
set_target_properties(cib_manager PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_manager PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_manager PRIVATE ${PROJECT_SOURCE_DIR}/cib_debug)
target_include_directories(cib_manager PRIVATE ${PROJECT_SOURCE_DIR}/common)
target_include_directories(cib_manager PUBLIC ${ZeroMQ_INCLUDE_DIR})
target_include_directories(cib_manager PRIVATE ${PROJECT_SOURCE_DIR}/i2c)

target_link_libraries(cib_manager cib_i2c common readline)

set(Boost_DEBUG ON)
find_package(Boost COMPONENTS ALL)


add_executable(cib_daq_server cib_daq_server.cpp)
target_compile_features(cib_daq_server PUBLIC cxx_std_11)
target_compile_definitions(cib_daq_server PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
set_target_properties(cib_daq_server PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_daq_server PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_daq_server PRIVATE ${PROJECT_SOURCE_DIR}/common)
target_link_libraries(cib_daq_server cib_daq spdlog  ${Boost_LIBRARIES} pthread common)

add_executable(cib_daq_client_simulator cib_daq_client_simulator.cpp)
target_compile_features(cib_daq_client_simulator PUBLIC cxx_std_11)
target_compile_definitions(cib_daq_client_simulator PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
set_target_properties(cib_daq_client_simulator PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_daq_client_simulator PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_daq_client_simulator PUBLIC ${PROJECT_SOURCE_DIR}/common)
target_include_directories(cib_daq_client_simulator PUBLIC ${Boost_INCLUDE_DIRS})
target_link_libraries(cib_daq_client_simulator cib_daq spdlog  ${Boost_LIBRARIES} pthread common readline)

add_executable(cib_log_server cib_log_server.cpp)
target_compile_features(cib_log_server PUBLIC cxx_std_11)
target_compile_definitions(cib_log_server PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
set_target_properties(cib_log_server PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_log_server PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_log_server PUBLIC ${PROJECT_SOURCE_DIR}/common)
target_include_directories(cib_log_server PUBLIC ${PROJECT_SOURCE_DIR}/axi_fifo)
target_link_libraries(cib_log_server spdlog pthread common)

add_executable(cib_trigger_analyser cib_trigger_analyser.cpp)
target_compile_features(cib_trigger_analyser PUBLIC cxx_std_11)
target_compile_definitions(cib_trigger_analyser PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
set_target_properties(cib_trigger_analyser PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_trigger_analyser PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_trigger_analyser PUBLIC ${PROJECT_SOURCE_DIR}/common)
target_link_libraries(cib_trigger_analyser spdlog pthread common readline)

add_executable(cib_trigger_dumper cib_trigger_dumper.cpp)
target_compile_features(cib_trigger_dumper PUBLIC cxx_std_11)
target_compile_definitions(cib_trigger_dumper PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
set_target_properties(cib_trigger_dumper PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_trigger_dumper PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_trigger_dumper PUBLIC ${PROJECT_SOURCE_DIR}/common)
target_link_libraries(cib_trigger_dumper spdlog pthread common)

add_executable(cib_lbls_server cib_lbls_server.cpp)
target_compile_features(cib_lbls_server PUBLIC cxx_std_11)
target_compile_definitions(cib_lbls_server PUBLIC SPDLOG_ACTIVE_LEVEL=SPDLOG_LEVEL_TRACE)
set_target_properties(cib_lbls_server PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(cib_lbls_server PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(cib_lbls_server PRIVATE ${PROJECT_SOURCE_DIR}/common)
target_include_directories(cib_manager PUBLIC ${ZeroMQ_INCLUDE_DIR})
target_link_libraries(cib_lbls_server cib_daq spdlog  ${Boost_LIBRARIES} pthread common zmq)

