
set(CMAKE_VERBOSE_MAKEFILE ON)

#macro(use_cxx11)
#  if (CMAKE_VERSION VERSION_LESS "3.1")
#    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
#      set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++11")
#    endif ()
#  else ()
#    set (CMAKE_CXX_STANDARD 11)
#  endif ()
#endmacro(use_cxx11)
add_executable(check_timing check_timing.cpp)
#target_include_directories(check_timing ${PROJECT_SOURCE_DIR}/common)
target_compile_features(check_timing PUBLIC cxx_std_11)
set_target_properties(check_timing PROPERTIES CXX_STANDARD_REQUIRED ON)
set_target_properties(check_timing PROPERTIES CXX_EXTENSIONS OFF)
target_include_directories(check_timing PRIVATE ${PROJECT_SOURCE_DIR}/pdts)
target_link_libraries(check_timing common)
